# svcalc-modified

./: .gitignore  .pre-commit-contig.yaml  README.md  calc_rec.kv  calc_rec.py  edit_party.kv  edit_party.py  gui.kv  gui.py  gui_battle.kv  gui_battle.py  gui_party.kv  gui_party.py  gui_record.kv  gui_record.py  main.kv  main.py  page_battle.kv  page_battle.py  page_party.kv  page_party.py  pyproject.toml  rankuma.bat  requirements.txt  stage.py  svcalc.bat  textinput4ja.py
bat/: articles.bat  home.bat  rankuma.bat  svcalc.bat
battle/: DB_battle.py  battle.db  battle.db-journal  battle.py  item.csv  item_calc.csv
component/: app.py  button.py  combobox.py  const.py  dialog.py  frame.py  images.py  label.py  party.py  stage.py
component/frame/: common.py  whole.py
component/frames/: common.py  whole.py
component/parts/: button.py  combobox.py  const.py  (+2 more)
custom/: party.csv
data/: db.py  pokemon.db
database/: battle.db  battle.py  battle_alter.py  pokemon.db  pokemon.py
home/: bundle.json  home.py  home_motimono.csv  home_seikaku.csv  home_terastal.csv  home_tokusei.csv  home_waza.csv  party_members.json
image/: favicon.xbm
kivy_gui/: popup.kv  popup.py
mypgl/: analytics.py  const.py  record.py
party/: default.csv  party.py  search.py  setting.txt
pokedata/: calc.py  const.py  exception.py  form.py  loader.py  nature.py  pokemon.py  search.py  stats.py  waza.py
recog/: capture.json  capture.py  config.json  coodinate.py  coordinate.json  dhash.json  image_recognition.py  obs.py  recog.py  setting.json
stats/: bundle.json  home.py  search.py
(+5 files in other folders)
